created components directory

--- a/ads-client/src/app/components/platform/platform.component.html
+++ b/ads-client/src/app/components/platform/platform.component.html
@@ -1,5 +1,5 @@
-<div class="container">
-  <div class="section">
+<mat-card-title class="container">
+  <mat-card-title class="section">
     <mat-card class="card">
       <mat-card-title>Status</mat-card-title>
 
@@ -60,7 +60,7 @@
       </mat-card-content>
 
     </mat-card>
-  </div>
+  </mat-card-title>
 
   <div class="section creatives">
     <mat-card class="card">
@@ -78,4 +78,4 @@
       <a [href]="platform.creatives.url">{{ platform.creatives.url }}</a>
     </mat-card>
   </div>
-</div>
+</mat-card-title>
