--- a/ads-client/src/app/components/platform/platform.component.scss
+++ b/ads-client/src/app/components/platform/platform.component.scss
@@ -12,7 +12,14 @@
 
   .card {
     margin-bottom: 15px;
-    box-shadow: none !important;
+    box-shadow: none;
+  }
+
+  .creatives .card {
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
   }
 
   mat-card-title {
@@ -28,6 +35,7 @@
   .header {
     font-size: 1rem;
     font-style: italic;
+    font-weight: 500;
   }
 
   .description {
@@ -74,17 +82,12 @@
 @media (min-width: 900px) {
   .container {
     flex-direction: row;
-    max-height: 680px;
 
     .section {
       flex-basis: 49%;
 
       .creatives {
         width: 60%;
-
-        .card {
-          height: 100%;
-        }
       }
     }
   }
